--- a/minimal-responsive navigation/index.html
+++ b/minimal-responsive navigation/index.html
@@ -19,7 +19,9 @@
                 <i></i>
             </label>
             <div class="logo">
-                <a href="#">BRAND</a>
+                <a href="#">
+                    <img src="logo_mix_m.png" alt="">
+                </a>
             </div>
             <div class="nav-wrapper">
                 <ul>
